--- a/html/homepage.html
+++ b/html/homepage.html
@@ -136,7 +136,7 @@
                 <div class="row">
                     <div class='col-md-4 text-left'>
                         <img src='../pictures/logo.jpg'> 
-                        <p>ShopP2P致力於在不影響使用者體驗下給予更加安全的交易保障，成本單純化與使用者隱私是我們的目標。</p>
+                        <p>ShopP2P致力於在不影響使用者體驗下給予更加安全的交易保障，保護使用者隱私是我們的目標。</p>
                     </div>
                     <div class='col-md-4 text-left'>
                         <h4>快速連結</h4>
