mining, PGN token, new contract

--- a/html/about_marketplace.html
+++ b/html/about_marketplace.html
@@ -13,6 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/8506f93d5c.js" crossorigin="anonymous"></script>
+    <script script type="module" src="../js/about_marketplace.js"></script>
 
     <title>ShopP2P</title>
 </head>
@@ -43,6 +44,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="my_board.html">我的物品</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="deposit.html">代幣相關</a>
                     </li>
                 </ul>
             </div>
@@ -76,7 +80,7 @@
             <div class="row">
                 <div class='col-md-4 text-left'>
                     <img src='../pictures/logo.jpg'>
-                    <p>ShopP2P致力於在不影響使用者體驗下給予更加安全的交易保障，保護使用者隱私是我們的目標。</p>
+                    <p>ShopP2P致力於在不影響使用者體驗下給予更加安全的交易保障，成本單純化與使用者隱私是我們的目標。</p>
                 </div>
                 <div class='col-md-4 text-left'>
                     <h4>快速連結</h4>
