--- a/html/my_board.html
+++ b/html/my_board.html
@@ -60,6 +60,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="my_board.html">我的物品</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="deposit.html">代幣相關</a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -72,11 +75,11 @@
             <div class="row">
                 <div class='col-md-12 text-left'>
                     <div class="row">
-                        <h5 id="user_name">使用者名稱: </h5>
+                        <h5 id="user_name">使用者名稱: </h5> <h5 id="user_balance">信用餘額: </h5>
                         <br>
                     </div>
                     <div class="row">
-                        <h5 id="rec">評價: %</h5> <h5 id="rec_std">標準: %</h5>
+                        <h5 id="rec">買賣評價: %</h5> <h5 id="rec_std">評價標準: %</h5>
                         <br>
                     </div>
                 </div>
@@ -132,7 +135,7 @@
             <div class="row">
                 <div class='col-md-4 text-left'>
                     <img src='../pictures/logo.jpg'>
-                    <p>ShopP2P致力於在不影響使用者體驗下給予更加安全的交易保障，保護使用者隱私是我們的目標。</p>
+                    <p>ShopP2P致力於在不影響使用者體驗下給予更加安全的交易保障，成本單純化與使用者隱私是我們的目標。</p>
                 </div>
                 <div class='col-md-4 text-left'>
                     <h4>快速連結</h4>
