--- a/html/register.html
+++ b/html/register.html
@@ -45,6 +45,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="my_board.html">我的物品</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="deposit.html">代幣相關</a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -83,7 +86,7 @@
             <div class="row">
                 <div class='col-md-4 text-left'>
                     <img src='../pictures/logo.jpg'>
-                    <p>ShopP2P致力於在不影響使用者體驗下給予更加安全的交易保障，保護使用者隱私是我們的目標。</p>
+                    <p>ShopP2P致力於在不影響使用者體驗下給予更加安全的交易保障，成本單純化與使用者隱私是我們的目標。</p>
                 </div>
                 <div class='col-md-4 text-left'>
                     <h4>快速連結</h4>
