--- a/html/detail.html
+++ b/html/detail.html
@@ -101,7 +101,7 @@
             <div class="row">
                 <div class="col-md-4 text-left">
                     <img src="../pictures/logo.jpg">
-                    <p>ShopP2P致力於在不影響使用者體驗下給予更加安全的交易保障，隱私與分散化是我們的目標。</p>
+                    <p>ShopP2P致力於在不影響使用者體驗下給予更加安全的交易保障，保護使用者隱私是我們的目標。</p>
                 </div>
                 <div class="col-md-4 text-left">
                     <h4>連結</h4>
@@ -116,9 +116,10 @@
                 </div>
                 <div class="col-md-4 text-left">
                     <h4>聯絡我們</h4>
-                    <p>花蓮縣壽豐鄉中正路111號 20樓<br>
-                        Phone: 0974155444<br>
-                        E-mail: <a href="mailto:saw@gmail.com">saw@gmail.com</a>
+                    <p>974花蓮縣壽豐鄉大學路二段1號<br>
+                        Phone: 03 8903000<br>
+                        Allen's E-mail: <a href="mailto:410625023@gms.ndhu.edu.tw">410625023@gms.ndhu.edu.tw</a><br>
+                        Billy's E-mail: <a href="mailto:410636016@gms.ndhu.edu.tw">410636016@gms.ndhu.edu.tw</a>
                     </p>
                 </div>
             </div>
