--- a/html/market.html
+++ b/html/market.html
@@ -94,7 +94,7 @@
             <div class="row">
                 <div class="col-md-4 text-left">
                     <img src="../pictures/logo.jpg">
-                    <p>ShopP2P致力於在不影響使用者體驗下給予更加安全的交易保障，保護使用者隱私是我們的目標。</p>
+                    <p>ShopP2P致力於在不影響使用者體驗下給予更加安全的交易保障，成本單純化與使用者隱私是我們的目標。</p>
                 </div>
                 <div class="col-md-4 text-left">
                     <h4>快速連結</h4>
@@ -111,8 +111,8 @@
                     <h4>聯絡我們</h4>
                     <p>974花蓮縣壽豐鄉大學路二段1號<br>
                         Phone: 03 8903000<br>
-                        Allen's E-mail: <a href="mailto:410625023@gms.ndhu.edu.tw">410625023@gms.ndhu.edu.tw</a><br>
-                        Billy's E-mail: <a href="mailto:410636016@gms.ndhu.edu.tw">410636016@gms.ndhu.edu.tw</a>
+                        Allen"s E-mail: <a href="mailto:410625023@gms.ndhu.edu.tw">410625023@gms.ndhu.edu.tw</a><br>
+                        Billy"s E-mail: <a href="mailto:410636016@gms.ndhu.edu.tw">410636016@gms.ndhu.edu.tw</a>
                     </p>
                 </div>
             </div>
