--- a/html/rule.html
+++ b/html/rule.html
@@ -67,19 +67,10 @@
                         <li>若買方認為對方商品不實，可以點選"差評"選項。</li>
                         <li>當"買家差評"發生時，賣方可以選擇"差評"以對買家惡意評價行為進行反制。</li>
                         <li>當"買方差評"和"賣方差評"發生時，系統會將違約押金進入暫時封鎖狀態，並依據個人評價決定是否歸還押金及賠償。</li>
-                        <li>雙方押金歸還數量如下系列圖(假設商品售價為10 ETH的情況，雙方交易前都給予合約20 ETH，合約內共有40 ETH):</li><br>
-                        <img src='../pictures/s1.png'>
-                        <li>若買家給好評，則10ETH轉到買家錢包，30ETH轉到賣家錢包。</li>
-                        <br>
-                        <br>
-                        <img src='../pictures/s2.png'>
-                        <li>若買家給差評 賣家給好評，則30ETH轉到買家錢包，10ETH轉到賣家錢包。</li>
-                        <br>
-                        <br>
-                        <img src='../pictures/s3.png'>
-                        <li>若雙方給對方差評，歷史評價高於標準評價者將收到原先的押金，歷史評價低於標準評價者，則由平台沒收押金。</li>
-                        
+                        <li>雙方押金歸還數量如下表(假設商品售價為10 ETH的情況，雙方交易前都給予合約20 ETH，合約內共有40 ETH):
+                        </li>
                     </ul>
+                    <img src='../pictures/ruletable.png'>
                 </div>
                 <section id='bottom'>
                     <p></p>
@@ -93,7 +84,7 @@
             <div class="row">
                 <div class='col-md-4 text-left'>
                     <img src='../pictures/logo.jpg'>
-                    <p>ShopP2P致力於在不影響使用者體驗下給予更加安全的交易保障，保護使用者隱私是我們的目標。</p>
+                    <p>ShopP2P致力於在不影響使用者體驗下給予更加安全的交易保障，成本單純化與使用者隱私是我們的目標。</p>
                 </div>
                 <div class='col-md-4 text-left'>
                     <h4>快速連結</h4>
